app/assets/stylesheets/website/layout.scss
@import "../shared/utils/clearfix";
@import "../shared/grid";
@import "../shared/typography";
@import "../shared/globals";

#wrapper {
  background: #fff;
  max-width: 100%;
  min-height: 37em;
  @include grid_styles;

  @media only screen and (min-width:764px) {
    padding-top: 1.7em;
  }
}

.js-enabled #wrapper {
  @media only screen and (min-width:670px) {
    padding-top: 4.6em;
  }

  @media only screen and (min-width:764px) {
    padding-top: 2.66em;
  }
}

#content {
  margin: 0 auto;
  padding: 0 12px;
  max-width: $global_max_width + 40px;
  background: #fff;

  @include type_styles;

  @media only screen and (min-width: 768px) {
    width: $global_content_width;
    padding: 0;
  }

  section {
    margin: 0;
    width: auto;
  }

  // override core
  article {
    background: transparent;
    float: none;
    margin-right: 0;
    min-height: inherit;
    position: inherit;
    width: auto;
    z-index: inherit;
  }

  img {
    width: 100%;
  }
  
  a:hover {
    color: #7F7F7F;
  }

  abbr[title] {
    border: none;
  }

  h1.section_title {
    color: #333;
    @include type-18;
    margin-bottom: 1em;
  }

  section ul, ol {
    li {
      @include type-16;
    }
  }

}

.lte-ie8 {
  #wrapper {
    padding-top: 2.66em;
    max-width: 100%;
    min-width: 761px;
    width: auto;
  }
}

